Resolved the alignemnt issue with <hr>

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -208,7 +208,8 @@ header {
     border: 1px solid #000;
   }
   hr{
-    width: 85%;
+    width: 80%;
+    margin: auto;
   }
 .edit{
   display: flex;
